parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    EVAL
    SUBSTR
    ANDBW
    EXP
    PLUSGREATER
    EOF
    COMMENT
    POSTINDEX
    NEXT
    INTERROGATION
    GOTO
    EXEC
    COMPLEMENT
    UNSHIFT
    ELSIF
    PREINDEX
    ORBW
    LENGTH
    VALUES
    LESSLESS
    DELETE
    INDEX
    RETURN
    REVERSE
    EXPREGULAR
    OCT
    SELECT
    CMP
    FILENO
    DEFINED
    GREATERGREATER
    SIN
    COLON
    UNLESS
    MKDIR
    ELSE
    LAST
    UNTIL
    REFERENCE
    INT
    PACK
    RAND
    SUB
    READ
    ARROW
    RMDIR
    OPEN
    DOT
    GUIONDOWN
    SHIFT
    INCREMENTO
    CLOSE
    SORT
    HEX
    WRITE
    PUSH
    DECREMENTO
    REFERENCIAS
    JOIN
    EXIT
    REFERENCIALISTA
    EACH
    TELL
    RENAME
    LOG
    DIE
    CHOWN
    SEEK
    POP
    CHOP
    FORK
    XOR
    KEYS
    ABS
    SPLIT
    LOCAL
    IF
    NOTS
    DISTINT
    SYSTEM
    SQRT
    RINDEX
    SLEEP
    DOLLARDOLLAR
    PLUSLESS

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration declaration_list
Rule 3     declaration_list -> declaration
Rule 4     declaration -> header_declaration
Rule 5     declaration -> print
Rule 6     declaration -> var_declaration
Rule 7     declaration -> ciclos
Rule 8     header_declaration -> USE ID SEMICOLON
Rule 9     header_declaration -> REQUIRE ID SEMICOLON
Rule 10    var_declaration -> PESOS ID SEMICOLON
Rule 11    var_declaration -> PESOS ID EQUAL E SEMICOLON
Rule 12    var_declaration -> PESOS ID incdec SEMICOLON
Rule 13    var_declaration -> PESOS ID EQUAL typevar SEMICOLON
Rule 14    var_declaration -> ARROBA ID SEMICOLON
Rule 15    var_declaration -> ARROBA ID EQUAL LPAREN lista RPAREN SEMICOLON
Rule 16    var_declaration -> ARROBA ID EQUAL ARROBA ID SEMICOLON
Rule 17    var_declaration -> PORCENTAJE ID SEMICOLON
Rule 18    var_declaration -> PORCENTAJE ID EQUAL LBLOCK lista1 RBLOCK SEMICOLON
Rule 19    var_declaration -> PORCENTAJE ID EQUAL LPAREN lista1 RPAREN SEMICOLON
Rule 20    var_declaration -> PORCENTAJE ID EQUAL LPAREN lista2 RPAREN SEMICOLON
Rule 21    var_declaration -> PORCENTAJE ID EQUAL PORCENTAJE ID SEMICOLON
Rule 22    lista2 -> typevar COMMA typevar COMMA lista2
Rule 23    lista2 -> typevar COMMA LPAREN lista RPAREN COMMA lista2
Rule 24    lista2 -> typevar COMMA LBRACKET lista RBRACKET COMMA lista2
Rule 25    lista2 -> typevar COMMA typevar
Rule 26    lista2 -> typevar COMMA LPAREN lista RPAREN
Rule 27    lista2 -> typevar COMMA LBRACKET lista RBRACKET
Rule 28    lista2 -> ID COMMA typevar COMMA lista2
Rule 29    lista2 -> ID COMMA LPAREN lista RPAREN COMMA lista2
Rule 30    lista2 -> ID COMMA LBRACKET lista RBRACKET COMMA lista2
Rule 31    lista2 -> ID COMMA typevar
Rule 32    lista2 -> ID COMMA LPAREN lista RPAREN
Rule 33    lista2 -> ID COMMA LBRACKET lista RBRACKET
Rule 34    lista1 -> typevar EQUALGREATER typevar COMMA lista1
Rule 35    lista1 -> typevar EQUALGREATER LPAREN lista RPAREN COMMA lista1
Rule 36    lista1 -> typevar EQUALGREATER LBRACKET lista RBRACKET COMMA lista1
Rule 37    lista1 -> typevar EQUALGREATER typevar
Rule 38    lista1 -> typevar EQUALGREATER LPAREN lista RPAREN
Rule 39    lista1 -> typevar EQUALGREATER LBRACKET lista RBRACKET
Rule 40    lista1 -> ID EQUALGREATER typevar COMMA lista1
Rule 41    lista1 -> ID EQUALGREATER LPAREN lista RPAREN COMMA lista1
Rule 42    lista1 -> ID EQUALGREATER LBRACKET lista RBRACKET COMMA lista1
Rule 43    lista1 -> ID EQUALGREATER typevar
Rule 44    lista1 -> ID EQUALGREATER LPAREN lista RPAREN
Rule 45    lista1 -> ID EQUALGREATER LBRACKET lista RBRACKET
Rule 46    lista -> typevar COMMA lista
Rule 47    lista -> typevar
Rule 48    typevar -> CADENA
Rule 49    typevar -> CADENAA
Rule 50    typevar -> ENTERO
Rule 51    typevar -> OCTAL
Rule 52    typevar -> HEXADECIMAL
Rule 53    E -> E PLUS T
Rule 54    E -> E MINUS T
Rule 55    E -> T
Rule 56    T -> T TIMES F
Rule 57    T -> T DIVIDE F
Rule 58    T -> F
Rule 59    F -> PESOS ID
Rule 60    F -> PESOS ID LBRACKET ENTERO RBRACKET
Rule 61    F -> ENTERO
Rule 62    F -> PESOS ID LBLOCK typevar RBLOCK
Rule 63    F -> LPAREN E RPAREN
Rule 64    ciclos -> FOR LPAREN sent_for SEMICOLON cond SEMICOLON PESOS ID incdec RPAREN LBLOCK declaration_list RBLOCK
Rule 65    ciclos -> FOREACH PESOS ID LPAREN ARROBA ID RPAREN LBLOCK declaration_list RBLOCK
Rule 66    ciclos -> WHILE LPAREN cond RPAREN LBLOCK declaration_list RBLOCK
Rule 67    sent_for -> PESOS ID
Rule 68    sent_for -> PESOS ID EQUAL ENTERO
Rule 69    sent_for -> MY PESOS ID EQUAL ENTERO
Rule 70    sent_for -> PESOS ID EQUAL ENTERO COMMA sent_for
Rule 71    sent_for -> MY PESOS ID EQUAL ENTERO COMMA sent_for
Rule 72    log -> LESS
Rule 73    log -> GREATER
Rule 74    log -> ISEQUAL
Rule 75    log -> LESSEQUAL
Rule 76    log -> GREATEREQUAL
Rule 77    log -> DEQUAL
Rule 78    log -> AND
Rule 79    log -> ANDS
Rule 80    log -> ORS
Rule 81    log -> OR
Rule 82    type -> typevar
Rule 83    type -> var_declaration_gen
Rule 84    cond -> type
Rule 85    cond -> cond log cond
Rule 86    cond -> NOT cond
Rule 87    cond -> LPAREN type RPAREN
Rule 88    cond -> LPAREN cond RPAREN
Rule 89    incdec -> PLUSPLUS
Rule 90    incdec -> MINUSMINUS
Rule 91    print -> PRINT arg SEMICOLON
Rule 92    print -> PRINT LPAREN arg RPAREN SEMICOLON
Rule 93    var_declaration_gen -> PESOS ID
Rule 94    var_declaration_gen -> PESOS ID LBRACKET ENTERO RBRACKET
Rule 95    var_declaration_gen -> PESOS ID LBLOCK typevar RBLOCK
Rule 96    var_declaration_gen -> PESOS ID LBLOCK ID RBLOCK
Rule 97    arg -> var_declaration_gen
Rule 98    arg -> CADENA
Rule 99    arg -> var_declaration_gen COMMA arg
Rule 100   arg -> CADENA COMMA arg

Terminals, with rules where they appear

ABS                  : 
AND                  : 78
ANDBW                : 
ANDS                 : 79
ARROBA               : 14 15 16 16 65
ARROW                : 
CADENA               : 48 98 100
CADENAA              : 49
CHOP                 : 
CHOWN                : 
CLOSE                : 
CMP                  : 
COLON                : 
COMMA                : 22 22 23 23 24 24 25 26 27 28 28 29 29 30 30 31 32 33 34 35 36 40 41 42 46 70 71 99 100
COMMENT              : 
COMPLEMENT           : 
DECREMENTO           : 
DEFINED              : 
DELETE               : 
DEQUAL               : 77
DIE                  : 
DISTINT              : 
DIVIDE               : 57
DOLLARDOLLAR         : 
DOT                  : 
EACH                 : 
ELSE                 : 
ELSIF                : 
ENTERO               : 50 60 61 68 69 70 71 94
EOF                  : 
EQUAL                : 11 13 15 16 18 19 20 21 68 69 70 71
EQUALGREATER         : 34 35 36 37 38 39 40 41 42 43 44 45
EVAL                 : 
EXEC                 : 
EXIT                 : 
EXP                  : 
EXPREGULAR           : 
FILENO               : 
FOR                  : 64
FOREACH              : 65
FORK                 : 
GOTO                 : 
GREATER              : 73
GREATEREQUAL         : 76
GREATERGREATER       : 
GUIONDOWN            : 
HEX                  : 
HEXADECIMAL          : 52
ID                   : 8 9 10 11 12 13 14 15 16 16 17 18 19 20 21 21 28 29 30 31 32 33 40 41 42 43 44 45 59 60 62 64 65 65 67 68 69 70 71 93 94 95 96 96
IF                   : 
INCREMENTO           : 
INDEX                : 
INT                  : 
INTERROGATION        : 
ISEQUAL              : 74
JOIN                 : 
KEYS                 : 
LAST                 : 
LBLOCK               : 18 62 64 65 66 95 96
LBRACKET             : 24 27 30 33 36 39 42 45 60 94
LENGTH               : 
LESS                 : 72
LESSEQUAL            : 75
LESSLESS             : 
LOCAL                : 
LOG                  : 
LPAREN               : 15 19 20 23 26 29 32 35 38 41 44 63 64 65 66 87 88 92
MINUS                : 54
MINUSMINUS           : 90
MKDIR                : 
MY                   : 69 71
NEXT                 : 
NOT                  : 86
NOTS                 : 
OCT                  : 
OCTAL                : 51
OPEN                 : 
OR                   : 81
ORBW                 : 
ORS                  : 80
PACK                 : 
PESOS                : 10 11 12 13 59 60 62 64 65 67 68 69 70 71 93 94 95 96
PLUS                 : 53
PLUSGREATER          : 
PLUSLESS             : 
PLUSPLUS             : 89
POP                  : 
PORCENTAJE           : 17 18 19 20 21 21
POSTINDEX            : 
PREINDEX             : 
PRINT                : 91 92
PUSH                 : 
RAND                 : 
RBLOCK               : 18 62 64 65 66 95 96
RBRACKET             : 24 27 30 33 36 39 42 45 60 94
READ                 : 
REFERENCE            : 
REFERENCIALISTA      : 
REFERENCIAS          : 
RENAME               : 
REQUIRE              : 9
RETURN               : 
REVERSE              : 
RINDEX               : 
RMDIR                : 
RPAREN               : 15 19 20 23 26 29 32 35 38 41 44 63 64 65 66 87 88 92
SEEK                 : 
SELECT               : 
SEMICOLON            : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 64 64 91 92
SHIFT                : 
SIN                  : 
SLEEP                : 
SORT                 : 
SPLIT                : 
SQRT                 : 
SUB                  : 
SUBSTR               : 
SYSTEM               : 
TELL                 : 
TIMES                : 56
UNLESS               : 
UNSHIFT              : 
UNTIL                : 
USE                  : 8
VALUES               : 
WHILE                : 66
WRITE                : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

E                    : 11 53 54 63
F                    : 56 57 58
T                    : 53 54 55 56 57
arg                  : 91 92 99 100
ciclos               : 7
cond                 : 64 66 85 85 86 88
declaration          : 2 3
declaration_list     : 1 2 64 65 66
header_declaration   : 4
incdec               : 12 64
lista                : 15 23 24 26 27 29 30 32 33 35 36 38 39 41 42 44 45 46
lista1               : 18 19 34 35 36 40 41 42
lista2               : 20 22 23 24 28 29 30
log                  : 85
print                : 5
program              : 0
sent_for             : 64 70 71
type                 : 84 87
typevar              : 13 22 22 23 24 25 25 26 27 28 31 34 34 35 36 37 37 38 39 40 43 46 47 62 82 95
var_declaration      : 6
var_declaration_gen  : 83 97 99

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration declaration_list
    (3) declaration_list -> . declaration
    (4) declaration -> . header_declaration
    (5) declaration -> . print
    (6) declaration -> . var_declaration
    (7) declaration -> . ciclos
    (8) header_declaration -> . USE ID SEMICOLON
    (9) header_declaration -> . REQUIRE ID SEMICOLON
    (91) print -> . PRINT arg SEMICOLON
    (92) print -> . PRINT LPAREN arg RPAREN SEMICOLON
    (10) var_declaration -> . PESOS ID SEMICOLON
    (11) var_declaration -> . PESOS ID EQUAL E SEMICOLON
    (12) var_declaration -> . PESOS ID incdec SEMICOLON
    (13) var_declaration -> . PESOS ID EQUAL typevar SEMICOLON
    (14) var_declaration -> . ARROBA ID SEMICOLON
    (15) var_declaration -> . ARROBA ID EQUAL LPAREN lista RPAREN SEMICOLON
    (16) var_declaration -> . ARROBA ID EQUAL ARROBA ID SEMICOLON
    (17) var_declaration -> . PORCENTAJE ID SEMICOLON
    (18) var_declaration -> . PORCENTAJE ID EQUAL LBLOCK lista1 RBLOCK SEMICOLON
    (19) var_declaration -> . PORCENTAJE ID EQUAL LPAREN lista1 RPAREN SEMICOLON
    (20) var_declaration -> . PORCENTAJE ID EQUAL LPAREN lista2 RPAREN SEMICOLON
    (21) var_declaration -> . PORCENTAJE ID EQUAL PORCENTAJE ID SEMICOLON
    (64) ciclos -> . FOR LPAREN sent_for SEMICOLON cond SEMICOLON PESOS ID incdec RPAREN LBLOCK declaration_list RBLOCK
    (65) ciclos -> . FOREACH PESOS ID LPAREN ARROBA ID RPAREN LBLOCK declaration_list RBLOCK
    (66) ciclos -> . WHILE LPAREN cond RPAREN LBLOCK declaration_list RBLOCK

    USE             shift and go to state 1
    REQUIRE         shift and go to state 2
    PRINT           shift and go to state 6
    PESOS           shift and go to state 3
    ARROBA          shift and go to state 16
    PORCENTAJE      shift and go to state 14
    FOR             shift and go to state 11
    FOREACH         shift and go to state 12
    WHILE           shift and go to state 4

    header_declaration             shift and go to state 10
    declaration_list               shift and go to state 15
    var_declaration                shift and go to state 7
    program                        shift and go to state 8
    ciclos                         shift and go to state 5
    declaration                    shift and go to state 13
    print                          shift and go to state 9

state 1

    (8) header_declaration -> USE . ID SEMICOLON

    ID              shift and go to state 17


state 2

    (9) header_declaration -> REQUIRE . ID SEMICOLON

    ID              shift and go to state 18


state 3

    (10) var_declaration -> PESOS . ID SEMICOLON
    (11) var_declaration -> PESOS . ID EQUAL E SEMICOLON
    (12) var_declaration -> PESOS . ID incdec SEMICOLON
    (13) var_declaration -> PESOS . ID EQUAL typevar SEMICOLON

    ID              shift and go to state 19


state 4

    (66) ciclos -> WHILE . LPAREN cond RPAREN LBLOCK declaration_list RBLOCK

    LPAREN          shift and go to state 20


state 5

    (7) declaration -> ciclos .

    USE             reduce using rule 7 (declaration -> ciclos .)
    REQUIRE         reduce using rule 7 (declaration -> ciclos .)
    PRINT           reduce using rule 7 (declaration -> ciclos .)
    PESOS           reduce using rule 7 (declaration -> ciclos .)
    ARROBA          reduce using rule 7 (declaration -> ciclos .)
    PORCENTAJE      reduce using rule 7 (declaration -> ciclos .)
    FOR             reduce using rule 7 (declaration -> ciclos .)
    FOREACH         reduce using rule 7 (declaration -> ciclos .)
    WHILE           reduce using rule 7 (declaration -> ciclos .)
    RBLOCK          reduce using rule 7 (declaration -> ciclos .)
    $end            reduce using rule 7 (declaration -> ciclos .)


state 6

    (91) print -> PRINT . arg SEMICOLON
    (92) print -> PRINT . LPAREN arg RPAREN SEMICOLON
    (97) arg -> . var_declaration_gen
    (98) arg -> . CADENA
    (99) arg -> . var_declaration_gen COMMA arg
    (100) arg -> . CADENA COMMA arg
    (93) var_declaration_gen -> . PESOS ID
    (94) var_declaration_gen -> . PESOS ID LBRACKET ENTERO RBRACKET
    (95) var_declaration_gen -> . PESOS ID LBLOCK typevar RBLOCK
    (96) var_declaration_gen -> . PESOS ID LBLOCK ID RBLOCK

    LPAREN          shift and go to state 24
    CADENA          shift and go to state 23
    PESOS           shift and go to state 22

    var_declaration_gen            shift and go to state 21
    arg                            shift and go to state 25

state 7

    (6) declaration -> var_declaration .

    USE             reduce using rule 6 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 6 (declaration -> var_declaration .)
    PRINT           reduce using rule 6 (declaration -> var_declaration .)
    PESOS           reduce using rule 6 (declaration -> var_declaration .)
    ARROBA          reduce using rule 6 (declaration -> var_declaration .)
    PORCENTAJE      reduce using rule 6 (declaration -> var_declaration .)
    FOR             reduce using rule 6 (declaration -> var_declaration .)
    FOREACH         reduce using rule 6 (declaration -> var_declaration .)
    WHILE           reduce using rule 6 (declaration -> var_declaration .)
    RBLOCK          reduce using rule 6 (declaration -> var_declaration .)
    $end            reduce using rule 6 (declaration -> var_declaration .)


state 8

    (0) S' -> program .



state 9

    (5) declaration -> print .

    USE             reduce using rule 5 (declaration -> print .)
    REQUIRE         reduce using rule 5 (declaration -> print .)
    PRINT           reduce using rule 5 (declaration -> print .)
    PESOS           reduce using rule 5 (declaration -> print .)
    ARROBA          reduce using rule 5 (declaration -> print .)
    PORCENTAJE      reduce using rule 5 (declaration -> print .)
    FOR             reduce using rule 5 (declaration -> print .)
    FOREACH         reduce using rule 5 (declaration -> print .)
    WHILE           reduce using rule 5 (declaration -> print .)
    RBLOCK          reduce using rule 5 (declaration -> print .)
    $end            reduce using rule 5 (declaration -> print .)


state 10

    (4) declaration -> header_declaration .

    USE             reduce using rule 4 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> header_declaration .)
    PRINT           reduce using rule 4 (declaration -> header_declaration .)
    PESOS           reduce using rule 4 (declaration -> header_declaration .)
    ARROBA          reduce using rule 4 (declaration -> header_declaration .)
    PORCENTAJE      reduce using rule 4 (declaration -> header_declaration .)
    FOR             reduce using rule 4 (declaration -> header_declaration .)
    FOREACH         reduce using rule 4 (declaration -> header_declaration .)
    WHILE           reduce using rule 4 (declaration -> header_declaration .)
    RBLOCK          reduce using rule 4 (declaration -> header_declaration .)
    $end            reduce using rule 4 (declaration -> header_declaration .)


state 11

    (64) ciclos -> FOR . LPAREN sent_for SEMICOLON cond SEMICOLON PESOS ID incdec RPAREN LBLOCK declaration_list RBLOCK

    LPAREN          shift and go to state 26


state 12

    (65) ciclos -> FOREACH . PESOS ID LPAREN ARROBA ID RPAREN LBLOCK declaration_list RBLOCK

    PESOS           shift and go to state 27


state 13

    (2) declaration_list -> declaration . declaration_list
    (3) declaration_list -> declaration .
    (2) declaration_list -> . declaration declaration_list
    (3) declaration_list -> . declaration
    (4) declaration -> . header_declaration
    (5) declaration -> . print
    (6) declaration -> . var_declaration
    (7) declaration -> . ciclos
    (8) header_declaration -> . USE ID SEMICOLON
    (9) header_declaration -> . REQUIRE ID SEMICOLON
    (91) print -> . PRINT arg SEMICOLON
    (92) print -> . PRINT LPAREN arg RPAREN SEMICOLON
    (10) var_declaration -> . PESOS ID SEMICOLON
    (11) var_declaration -> . PESOS ID EQUAL E SEMICOLON
    (12) var_declaration -> . PESOS ID incdec SEMICOLON
    (13) var_declaration -> . PESOS ID EQUAL typevar SEMICOLON
    (14) var_declaration -> . ARROBA ID SEMICOLON
    (15) var_declaration -> . ARROBA ID EQUAL LPAREN lista RPAREN SEMICOLON
    (16) var_declaration -> . ARROBA ID EQUAL ARROBA ID SEMICOLON
    (17) var_declaration -> . PORCENTAJE ID SEMICOLON
    (18) var_declaration -> . PORCENTAJE ID EQUAL LBLOCK lista1 RBLOCK SEMICOLON
    (19) var_declaration -> . PORCENTAJE ID EQUAL LPAREN lista1 RPAREN SEMICOLON
    (20) var_declaration -> . PORCENTAJE ID EQUAL LPAREN lista2 RPAREN SEMICOLON
    (21) var_declaration -> . PORCENTAJE ID EQUAL PORCENTAJE ID SEMICOLON
    (64) ciclos -> . FOR LPAREN sent_for SEMICOLON cond SEMICOLON PESOS ID incdec RPAREN LBLOCK declaration_list RBLOCK
    (65) ciclos -> . FOREACH PESOS ID LPAREN ARROBA ID RPAREN LBLOCK declaration_list RBLOCK
    (66) ciclos -> . WHILE LPAREN cond RPAREN LBLOCK declaration_list RBLOCK

    $end            reduce using rule 3 (declaration_list -> declaration .)
    RBLOCK          reduce using rule 3 (declaration_list -> declaration .)
    USE             shift and go to state 1
    REQUIRE         shift and go to state 2
    PRINT           shift and go to state 6
    PESOS           shift and go to state 3
    ARROBA          shift and go to state 16
    PORCENTAJE      shift and go to state 14
    FOR             shift and go to state 11
    FOREACH         shift and go to state 12
    WHILE           shift and go to state 4

    header_declaration             shift and go to state 10
    declaration_list               shift and go to state 28
    var_declaration                shift and go to state 7
    ciclos                         shift and go to state 5
    declaration                    shift and go to state 13
    print                          shift and go to state 9

state 14

    (17) var_declaration -> PORCENTAJE . ID SEMICOLON
    (18) var_declaration -> PORCENTAJE . ID EQUAL LBLOCK lista1 RBLOCK SEMICOLON
    (19) var_declaration -> PORCENTAJE . ID EQUAL LPAREN lista1 RPAREN SEMICOLON
    (20) var_declaration -> PORCENTAJE . ID EQUAL LPAREN lista2 RPAREN SEMICOLON
    (21) var_declaration -> PORCENTAJE . ID EQUAL PORCENTAJE ID SEMICOLON

    ID              shift and go to state 29


state 15

    (1) program -> declaration_list .

    $end            reduce using rule 1 (program -> declaration_list .)


state 16

    (14) var_declaration -> ARROBA . ID SEMICOLON
    (15) var_declaration -> ARROBA . ID EQUAL LPAREN lista RPAREN SEMICOLON
    (16) var_declaration -> ARROBA . ID EQUAL ARROBA ID SEMICOLON

    ID              shift and go to state 30


state 17

    (8) header_declaration -> USE ID . SEMICOLON

    SEMICOLON       shift and go to state 31


state 18

    (9) header_declaration -> REQUIRE ID . SEMICOLON

    SEMICOLON       shift and go to state 32


state 19

    (10) var_declaration -> PESOS ID . SEMICOLON
    (11) var_declaration -> PESOS ID . EQUAL E SEMICOLON
    (12) var_declaration -> PESOS ID . incdec SEMICOLON
    (13) var_declaration -> PESOS ID . EQUAL typevar SEMICOLON
    (89) incdec -> . PLUSPLUS
    (90) incdec -> . MINUSMINUS

    SEMICOLON       shift and go to state 34
    EQUAL           shift and go to state 36
    PLUSPLUS        shift and go to state 35
    MINUSMINUS      shift and go to state 33

    incdec                         shift and go to state 37

state 20

    (66) ciclos -> WHILE LPAREN . cond RPAREN LBLOCK declaration_list RBLOCK
    (84) cond -> . type
    (85) cond -> . cond log cond
    (86) cond -> . NOT cond
    (87) cond -> . LPAREN type RPAREN
    (88) cond -> . LPAREN cond RPAREN
    (82) type -> . typevar
    (83) type -> . var_declaration_gen
    (48) typevar -> . CADENA
    (49) typevar -> . CADENAA
    (50) typevar -> . ENTERO
    (51) typevar -> . OCTAL
    (52) typevar -> . HEXADECIMAL
    (93) var_declaration_gen -> . PESOS ID
    (94) var_declaration_gen -> . PESOS ID LBRACKET ENTERO RBRACKET
    (95) var_declaration_gen -> . PESOS ID LBLOCK typevar RBLOCK
    (96) var_declaration_gen -> . PESOS ID LBLOCK ID RBLOCK

    NOT             shift and go to state 44
    LPAREN          shift and go to state 43
    CADENA          shift and go to state 40
    CADENAA         shift and go to state 48
    ENTERO          shift and go to state 46
    OCTAL           shift and go to state 41
    HEXADECIMAL     shift and go to state 45
    PESOS           shift and go to state 22

    typevar                        shift and go to state 38
    var_declaration_gen            shift and go to state 39
    cond                           shift and go to state 42
    type                           shift and go to state 47

state 21

    (97) arg -> var_declaration_gen .
    (99) arg -> var_declaration_gen . COMMA arg

    RPAREN          reduce using rule 97 (arg -> var_declaration_gen .)
    SEMICOLON       reduce using rule 97 (arg -> var_declaration_gen .)
    COMMA           shift and go to state 49


state 22

    (93) var_declaration_gen -> PESOS . ID
    (94) var_declaration_gen -> PESOS . ID LBRACKET ENTERO RBRACKET
    (95) var_declaration_gen -> PESOS . ID LBLOCK typevar RBLOCK
    (96) var_declaration_gen -> PESOS . ID LBLOCK ID RBLOCK

    ID              shift and go to state 50


state 23

    (98) arg -> CADENA .
    (100) arg -> CADENA . COMMA arg

    RPAREN          reduce using rule 98 (arg -> CADENA .)
    SEMICOLON       reduce using rule 98 (arg -> CADENA .)
    COMMA           shift and go to state 51


state 24

    (92) print -> PRINT LPAREN . arg RPAREN SEMICOLON
    (97) arg -> . var_declaration_gen
    (98) arg -> . CADENA
    (99) arg -> . var_declaration_gen COMMA arg
    (100) arg -> . CADENA COMMA arg
    (93) var_declaration_gen -> . PESOS ID
    (94) var_declaration_gen -> . PESOS ID LBRACKET ENTERO RBRACKET
    (95) var_declaration_gen -> . PESOS ID LBLOCK typevar RBLOCK
    (96) var_declaration_gen -> . PESOS ID LBLOCK ID RBLOCK

    CADENA          shift and go to state 23
    PESOS           shift and go to state 22

    var_declaration_gen            shift and go to state 21
    arg                            shift and go to state 52

state 25

    (91) print -> PRINT arg . SEMICOLON

    SEMICOLON       shift and go to state 53


state 26
